# clausen.rs

./: CITATION.cff  Cargo.toml  README.md
benches/: cl.rs  sl.rs
src/: cl.rs  cl1.rs  cl2.rs  cl3.rs  cl4.rs  cl5.rs  cln.rs  general.rs  lib.rs  range_reduction.rs  sl.rs  sln.rs
src/cl/: cl1.rs  cl2.rs  cl4.rs  cl6.rs  cln.rs
src/sl/: sl0.rs  sl1.rs  sl10.rs  sl11.rs  sl12.rs  sl13.rs  sl14.rs  sl15.rs  sl16.rs  sl17.rs  sl18.rs  sl19.rs  sl2.rs  sl20.rs  sl21.rs  sl22.rs  sl23.rs  sl24.rs  sl25.rs  sl3.rs  sl4.rs  sl5.rs  sl6.rs  sl7.rs  sl8.rs  sl9.rs  sln.rs
tests/: cl.rs  common.rs  sl.rs
tests/common/: mod.rs
tests/data/: Cl-10.txt  Cl10.txt  Cl11.txt  Cl3.txt  Cl4.txt  Cl5.txt  Cl6.txt  Cl7.txt  Cl8.txt  Sl1.txt
