[package]
name = "clausen"
version = "0.1.0"
authors = ["Alexander Voigt <ahgvoigt@gmail.com>"]
license = "LGPL-3.0-only"
readme = "README.md"
description = "Rust implementation of Clausen functions."
homepage = "https://github.com/Expander/clausen.rs"
repository = "https://github.com/Expander/clausen.rs"
edition = "2018"

[dependencies]
num = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "cl"
harness = false

[[bench]]
name = "sl"
harness = false
